--- a/14 Login and Authentication with JWT/package.json
+++ b/14 Login and Authentication with JWT/package.json
@@ -7,7 +7,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.0"
+    "mysql2": "^3.2.0",
+    "uuid": "^9.0.0"
   },
   "name": "14-login-and-authentication-with-jwt",
   "version": "1.0.0",
