--- a/14 Login and Authentication with JWT/package.json
+++ b/14 Login and Authentication with JWT/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
   "name": "14-login-and-authentication-with-jwt",
